# tavern

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_scenes_edges.py  0003_artifacts.py  0004_artifacts_library.py  0005_session_log.py
backend/app/: config.py  deps.py  main.py  models.py  schemas.py
backend/app/realtime/: protocol.py  rooms.py  ws.py
backend/app/routers/: artifacts.py  edges.py  games.py  health.py  log.py  scenes.py
backend/tests/: conftest.py  test_artifacts.py  test_games.py  test_health.py  test_log.py  test_scenes.py  test_ws.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  router.ts  style.css
frontend/src/__tests__/: App.test.ts  ArtifactInspector.test.ts  ArtifactLibrary.test.ts  ArtifactPanel.test.ts  CanvasEdges.test.ts  DetailPanel.test.ts  GamesView.test.ts  MasterView.test.ts  PlayerView.test.ts  SceneNode.test.ts  SceneScreen.test.ts  SessionLog.test.ts  artifacts.store.test.ts  campaign.store.test.ts  games.api.test.ts  live.store.test.ts  log.api.test.ts  log.store.test.ts  player.store.test.ts  ws.test.ts
qa/: package-lock.json  package.json  playwright.config.ts
qa/tests/: games.spec.ts  master.spec.ts
(+21 files in other folders)
